--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -135,5 +135,5 @@ jobs:
       env:
         AUTHOR: "Mr Bean"
       run: |
-        mvn clean deploy --file pom.xml -DmuleDeploy -Denvironment="dev" -Dca_client_id="${{ secrets.CA_CLIENT_ID }}" -Dca_client_secret="${{ secrets.CA_CLIENT_SECRET }}" -DapplicationName="cicd-gregh" -Dmessage="Hello Greg!"
+        mvn clean deploy --file pom.xml -DmuleDeploy -Denvironment="dev" -Dca_client_id="${{ secrets.CA_CLIENT_ID }}" -Dca_client_secret="${{ secrets.CA_CLIENT_SECRET }}" -DapplicationName="cicd-gregh" -Dmessage="Hello Greg version 2!"
  
